...
        <string name="cd_more_options">More options</string>
        <string name="cd_post_image">Post image</string>
        <string name="cd_like">Like</string>
        <string name="cd_comment">Comment</string>
        <string name="filter">Filtro</string>
        <string name="post_lorem">Lorem ipsum dolor sit amet...</string>
        <string name="nav_explore">Explore</string>
        <string name="nav_home">Home</string>
        <string name="nav_profile">Profile</string>
        <string name="cd_logo_condorapp">Logo Condorapp</string>
        <string name="login_subtitle">Descubre la magia de los\nAndes y más allá</string>
        <string name="email_label">Email</string>
        <string name="email_placeholder">name@example.com</string>
        <string name="password_label">Password</string>
        <string name="forgot_password">Forgot password?</string>
...
